# Cerebrofy

./: .cerebrofy-ignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cerebrofy_blueprint_v5_0.md  pyproject.toml
.cerebrofy/: config.yaml  intent.yaml
.cerebrofy/queries/: ruby.scm
.github/workflows/: ci.yml  release.yml  semantic-release.yml  smoke.yml
.ideas/: README.md
.ideas/07-refactor-impact-predictor/: DEVIATIONS.md
docs/: architecture.md  competitive-landscape-2026-06.md  configuration.md  how-cerebrofy-works.md  mcp-integration.md  speckit-workflow.md  windows-install.md
docs/superpowers/plans/: 2026-06-16-cerebrofy-viz.md  2026-06-21-memory-layer.md  2026-06-21-semantic-release.md
docs/superpowers/specs/: 2026-06-14-speckit-removal-design.md  2026-06-16-cerebrofy-viz-design.md  2026-06-21-memory-layer-design.md  2026-06-21-semantic-release-design.md
docs/viz-prototypes/: approach-a-force-graph.html  approach-b-threejs-bloom.html  approach-c-webgl-shaders.html
migrations/: 004_memories.sql
packaging/homebrew/: update_formula.sh
packaging/homebrew/Formula/: cerebrofy.rb
packaging/macos/: build_bottle.sh
packaging/snap/: build_snap.sh  snapcraft.yaml
packaging/windows/: installer.nsi  nuitka_build.bat
packaging/windows/winget_manifest/: cerebrofy.cerebrofy.installer.yaml  cerebrofy.cerebrofy.locale.en-US.yaml  cerebrofy.cerebrofy.yaml
specs/001-sensory-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sensory-foundation/checklists/: requirements.md
specs/001-sensory-foundation/contracts/: cli-init.md  neuron-schema.md
specs/002-build-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-build-engine/checklists/: requirements.md
specs/002-build-engine/contracts/: cli-build.md  db-schema.md
specs/003-autonomic-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-autonomic-nervous-system/checklists/: requirements.md
specs/003-autonomic-nervous-system/contracts/: cli-migrate.md  cli-update.md  cli-validate.md
specs/004-ai-bridge/: data-model.md  plan.md  spec.md  tasks.md
specs/004-ai-bridge/checklists/: requirements.md
specs/004-ai-bridge/contracts/: cli-plan.md  cli-specify.md  cli-tasks.md
specs/005-distribution-release/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-distribution-release/checklists/: requirements.md
specs/005-distribution-release/contracts/: cli-mcp.md  cli-parse.md  mcp-tools.md
specs/_archive/004-ai-bridge/: quickstart.md  research.md
specs/_archive/005-distribution-release/: data-model.md
src/cerebrofy/: __init__.py  __main__.py  cli.py
src/cerebrofy/analysis/: blast_radius.py  coverage_gap.py  impact.py  risk_scorer.py  sequence.py  silo_detector.py
src/cerebrofy/ci/: github_commenter.py
src/cerebrofy/commands/: blast_radius.py  build.py  context.py  coverage_gap.py  epistemic.py  health.py  impact.py  init.py  intent.py  mcp.py  memory.py  migrate.py  onboard.py  parse.py  plan.py  silo.py  specify.py  tasks.py  update.py  validate.py  viz.py  vuln.py
src/cerebrofy/config/: loader.py
src/cerebrofy/context/: exporter.py  optimizer.py  scorer.py  token_counter.py
src/cerebrofy/db/: connection.py  lock.py  schema.py  writer.py
src/cerebrofy/embedder/: __init__.py  base.py  cohere_emb.py  local.py  openai_emb.py
src/cerebrofy/epistemic/: __init__.py  state.py
src/cerebrofy/graph/: edges.py  resolver.py
src/cerebrofy/health/: __init__.py  metrics.py  reporter.py  snapshot.py
src/cerebrofy/hooks/: installer.py
src/cerebrofy/ignore/: ruleset.py
src/cerebrofy/intent/: __init__.py  enricher.py  loader.py
src/cerebrofy/llm/: client.py  prompt_builder.py
src/cerebrofy/markdown/: lobe.py  (+1 more)
tests/integration/: test_mcp_command.py  test_migrate_command.py  test_parse_command.py  test_plan_command.py  test_specify_command.py  test_tasks_command.py  test_update_command.py  test_validate_command.py  test_viz_command.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_blast_radius.py  test_change_detector.py  test_change_detector_extended.py  test_config_loader.py  test_context.py  test_coverage_gap.py  test_db_schema.py  test_db_writer.py  test_drift_classifier.py  test_epistemic.py  test_graph_resolver.py  test_health.py  test_hooks.py  test_hooks_sentinel.py  test_hybrid_search.py  test_ignore_ruleset.py  test_impact.py  test_init_helpers.py  test_intent.py  test_llm_client.py  test_markdown.py  test_mcp_registrar.py  test_mcp_resources.py  test_memory_decay.py  test_memory_embedder.py  test_memory_search.py  test_memory_store.py  test_neuron.py  test_onboard_planner.py  test_parse_command.py  test_plan_command.py  test_prompt_builder.py  test_scope_resolver.py  test_scope_resolver_extended.py  test_silo_command.py  test_silo_detector.py  test_skills_installer.py  test_tasks_command.py  test_vuln.py
(+70 files in other folders)
