[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebrofy"
version = "1.0.0"
description = "AI-powered codebase intelligence CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10,<2",
    "pathspec>=0.12",
    "PyYAML>=6.0",
    "click>=8.1",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
cohere = ["cohere>=4.0"]
mcp = ["mcp>=1.0"]
full = [
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "cohere>=4.0",
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
]

[project.scripts]
cerebrofy = "cerebrofy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cerebrofy = ["queries/*.scm"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

# mcp is an optional dependency that ships no type stubs.
# Suppress import-not-found for the whole mcp namespace.
[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

# mcp decorators (list_tools, call_tool) raise either no-untyped-call or
# untyped-decorator depending on mypy's evaluation order — never both at once.
# Disable warn_unused_ignores locally so both codes can coexist safely.
[[tool.mypy.overrides]]
module = ["cerebrofy.mcp.server"]
warn_unused_ignores = false
